configs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
